[package]
name = "pjdfstest"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
exacl = "0.12.0"
tempfile = "3.14.0"
rand = { version = "0.8.6", features = ["min_const_gen"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
anyhow = "1.0.93"
pastey = "0.2.2"
gumdrop = "0.8.1"
figment = { version = "0.10.6", features = ["toml"] }
nix = { version = "0.29", features = ["fs", "socket", "mount", "user"] }
serde = { version = "1.0.214", features = ["derive"] }
inventory = "0.3.0"
walkdir = "2.3.2"
sysctl = "0.6.0"

[target.'cfg(target_os = "freebsd")'.dependencies]
jail = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.4"

[[bin]]
name = "pjdfstest"
path = "src/main.rs"

[build-dependencies]
cfg_aliases = "0.2.1"
